--- a/openinstallcreator/en.lproj/MainMenu.xib
+++ b/openinstallcreator/en.lproj/MainMenu.xib
@@ -15,7 +15,6 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
-                <outlet property="badge0" destination="GLh-KJ-vGO" id="N0s-AG-4Gs"/>
                 <outlet property="continueButton0" destination="74D-mH-PgT" id="VjU-KG-y2R"/>
                 <outlet property="continueText0" destination="UZC-Bf-3sC" id="2ZP-2z-uUr"/>
                 <outlet property="progressBar0" destination="DfI-VN-1bf" id="Qjj-sJ-3Ls"/>
@@ -245,7 +244,7 @@
                             <button id="74D-mH-PgT">
                                 <rect key="frame" x="248" y="32" width="30" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="arrowbutton" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="lgz-vF-SDb">
+                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="arrowbutton" imagePosition="only" alignment="center" enabled="NO" imageScaling="proportionallyUpOrDown" inset="2" id="lgz-vF-SDb">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
@@ -275,7 +274,7 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="m2d-bY-2GK">
+                            <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="m2d-bY-2GK">
                                 <rect key="frame" x="49" y="90" width="422" height="17"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="@%" id="ojO-se-oWd">
@@ -295,11 +294,6 @@
                                     <action selector="readybutton0Clicked:" target="Voe-Tx-rLC" id="Obb-vK-mKV"/>
                                 </connections>
                             </button>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="GLh-KJ-vGO">
-                                <rect key="frame" x="419" y="388" width="21" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="badge" id="gZ0-od-ZJZ"/>
-                            </imageView>
                             <button id="8vY-FJ-GuY">
                                 <rect key="frame" x="133" y="154" width="263" height="230"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -332,7 +326,6 @@
     </objects>
     <resources>
         <image name="arrowbutton" width="30" height="30"/>
-        <image name="badge" width="36" height="36"/>
         <image name="elcapitan" width="512" height="512"/>
     </resources>
 </document>
