--- a/openinstallcreator/en.lproj/About.xib
+++ b/openinstallcreator/en.lproj/About.xib
@@ -19,9 +19,9 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Mzv-vF-eTe">
-                        <rect key="frame" x="46" y="348" width="309" height="48"/>
+                        <rect key="frame" x="-2" y="348" width="404" height="48"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <textFieldCell key="cell" lineBreakMode="clipping" title="openinstallcreator" id="svL-y1-ep2">
+                        <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="openinstallcreator" id="svL-y1-ep2">
                             <font key="font" metaFont="system" size="40"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -39,7 +39,7 @@
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="CR0-ZN-zwB">
                         <rect key="frame" x="123" y="281" width="154" height="17"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Beta 2" id="QaU-EB-buC">
+                        <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Beta 3" id="QaU-EB-buC">
                             <font key="font" metaFont="systemBold"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
