--- a/Source code/openinstallcreator/en.lproj/About.xib
+++ b/Source code/openinstallcreator/en.lproj/About.xib
@@ -39,7 +39,7 @@
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="CR0-ZN-zwB">
                         <rect key="frame" x="123" y="281" width="154" height="17"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Beta 6" id="QaU-EB-buC">
+                        <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Version 1.0" id="QaU-EB-buC">
                             <font key="font" metaFont="systemBold"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -50,7 +50,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     </box>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="1xn-AS-yOM">
-                        <rect key="frame" x="72" y="9" width="256" height="14"/>
+                        <rect key="frame" x="73" y="9" width="256" height="14"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textFieldCell key="cell" lineBreakMode="clipping" title="Copyright © 2020 fordApps. All rights reserved." id="DH6-4W-FaL">
                             <font key="font" metaFont="smallSystem"/>
