--- a/Source code/openinstallcreator/en.lproj/MainMenu.xib
+++ b/Source code/openinstallcreator/en.lproj/MainMenu.xib
@@ -115,7 +115,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     </box>
                     <button verticalHuggingPriority="750" id="bPj-eW-Teb">
-                        <rect key="frame" x="-1" y="2" width="176" height="32"/>
+                        <rect key="frame" x="-6" y="2" width="185" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="About openinstallcreator" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Cu9-5V-PNs">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -155,9 +155,9 @@
                                         </connections>
                                     </popUpButton>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="LQk-dK-mwy">
-                                        <rect key="frame" x="114" y="419" width="299" height="17"/>
+                                        <rect key="frame" x="-2" y="419" width="532" height="17"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <textFieldCell key="cell" lineBreakMode="clipping" title="Select a volume to become a Bootable Installer..." id="eVL-Is-jvx">
+                                        <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Select a volume to become a Bootable Installer..." id="eVL-Is-jvx">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -188,7 +188,7 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                     </progressIndicator>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="BlW-Iq-LFy">
-                                        <rect key="frame" x="57" y="131" width="413" height="17"/>
+                                        <rect key="frame" x="-2" y="131" width="532" height="17"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Click the OS X icon to browse for a macOS Installer... (10.7 to 10.15)" id="zaH-61-aqE">
                                             <font key="font" metaFont="system"/>
@@ -276,7 +276,7 @@
                                         </connections>
                                     </popUpButton>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="BSd-qk-q9I">
-                                        <rect key="frame" x="143" y="419" width="243" height="17"/>
+                                        <rect key="frame" x="-2" y="419" width="532" height="17"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Select an Installer Version to download" id="r6a-wX-w2b">
                                             <font key="font" metaFont="system"/>
@@ -305,7 +305,7 @@
                                         </textFieldCell>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="FE4-dc-Gwa">
-                                        <rect key="frame" x="57" y="131" width="413" height="17"/>
+                                        <rect key="frame" x="-2" y="131" width="532" height="17"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Click the Folder icon to select a save folder..." id="9XP-cD-epO">
                                             <font key="font" metaFont="system"/>
@@ -353,7 +353,7 @@
                         </subviews>
                     </customView>
                     <button verticalHuggingPriority="750" id="h8e-i3-p9V">
-                        <rect key="frame" x="14" y="29" width="146" height="32"/>
+                        <rect key="frame" x="9" y="29" width="156" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="Reset Application" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="B1R-Iw-8Ku">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
